--- a/LSTM_MLP_Autoencoder.ipynb
+++ b/LSTM_MLP_Autoencoder.ipynb
@@ -4898,7 +4898,7 @@
    "source": [
     "def lstm_fit_predict(X_train, y_train, X_test, y_test):    \n",
     "    model = tf.keras.Sequential([\n",
-    "        # Return sequence is set to true for the first two layers. These will output the predictions from each node after each care event has been passed through. This results in an output with equivalent dimensions to the input\n"
+    "        # Return sequence is set to true for the first two layers. These will output the predictions from each node after each care event has been passed through. This results in an output with equivalent dimensions to the input\n",
     "        layers.LSTM(100, return_sequences=True, stateful=False, input_shape=(X_train.shape[1], X_train.shape[2]),\n",
     "                    recurrent_dropout=0.4, dropout=0.5),\n",
     "        layers.LSTM(50, return_sequences=True, dropout=0.5, recurrent_dropout=0.3, stateful=False),\n",
