--- a/LSTM_MLP_Autoencoder.ipynb
+++ b/LSTM_MLP_Autoencoder.ipynb
@@ -4898,11 +4898,15 @@
    "source": [
     "def lstm_fit_predict(X_train, y_train, X_test, y_test):    \n",
     "    model = tf.keras.Sequential([\n",
-    "        # Return sequence is set to true for the first two layers. These will output the predictions from each node after each care event has been passed through. This results in an output with equivalent dimensions to the input\n",
+    "        # Return sequence is set to true for the first two layers. These will output the predictions from each node after each\n",
+    "        # care event has been passed through. This results in an output with equivalent dimensions to the input\n",
     "        layers.LSTM(100, return_sequences=True, stateful=False, input_shape=(X_train.shape[1], X_train.shape[2]),\n",
     "                    recurrent_dropout=0.4, dropout=0.5),\n",
     "        layers.LSTM(50, return_sequences=True, dropout=0.5, recurrent_dropout=0.3, stateful=False),\n",
+    "        # Return sequence is set to false for the last layer. It outputs a vector that is the prediction\n",
+    "        # from each node after the final care event has been passed through.\n",
     "        layers.LSTM(50, return_sequences=False, dropout=0.5, recurrent_dropout=0.3, stateful=False),\n",
+    "        # The output of the third LSTM layer is fed to a dense layer that will output the mortality prediction for the patient admission\n",
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    \n",
