--- a/LSTM_MLP_Autoencoder.ipynb
+++ b/LSTM_MLP_Autoencoder.ipynb
@@ -90,7 +90,9 @@
     "input_dim = encounters.shape[1]\n",
     "\n",
     "class Autoencoder(Model):\n",
+    "    # Create initialization method for the class\n",
     "    def __init__(self, latent_dim, input_dim):\n",
+    "        # Call initialization method for the parent class\n",
     "        super(Autoencoder, self).__init__()\n",
     "        self.latent_dim = latent_dim\n",
     "        self.input_dim = input_dim\n",
