--- a/LSTM_MLP_Autoencoder.ipynb
+++ b/LSTM_MLP_Autoencoder.ipynb
@@ -186,7 +186,7 @@
     "autoencoder = Autoencoder(latent_dim, input_dim)\n",
     "autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
     "\n",
-    "autoencoder.fit(X, X, batch_size=256, epochs=20, shuffle=True)"
+    "autoencoder.fit(X, X, batch_size=256, epochs=20, shuffle=True)  # Shuffle data between each epoch"
    ]
   },
   {
