--- a/Create_Care_Events.ipynb
+++ b/Create_Care_Events.ipynb
@@ -502,7 +502,7 @@
     "tags": []
    },
    "source": [
-    "### Process encounter vectors per https://github.com/EpistasisLab/MIMIC_trajectories/blob/master/ProcessEncounterVectors.ipynb."
+    "### Process encounter vectors"
    ]
   },
   {
