--- a/LSTM_MLP_One-Hot_Vectors.ipynb
+++ b/LSTM_MLP_One-Hot_Vectors.ipynb
@@ -1010,8 +1010,8 @@
     "\n",
     "    X = sequence.pad_sequences(np.array(encounter_list, dtype=object), \n",
     "                               maxlen=i, \n",
-    "                               padding='post', \n",
-    "                               truncating='post')\n",
+    "                               padding='post',    # Care events shorter than maxlen are padded to maxlen\n",
+    "                               truncating='post') # Care events longer than maxlen are truncated to maxlen\n",
     "    y = np.array(y)\n",
     "    \n",
     "    # Train Model\n",
