--- a/Create_Care_Events.ipynb
+++ b/Create_Care_Events.ipynb
@@ -233,16 +233,23 @@
     "    last_e = None\n",
     "    first_e = None\n",
     "    for e in adm_events:\n",
+    "        # if no first event, i.e., first_e is None, current event is the first event\n",
     "        if not first_e:\n",
     "            first_e = e\n",
     "        \n",
+    "        # if there is a last event, i.e. last_e is not None, check the time between the last event and the current event\n",
     "        if last_e:\n",
     "            tdelta = e - last_e\n",
+    "            # when the time between the last event and the current event is greater than the time limit,\n", 
+    "            # the last event is the last event in the encounter. Create a new encounter id, eid, for the \n",
+    "            # encounter and append it with the admission id, the time of the first and last encounter. \n",
     "            if tdelta > delta_limit:\n",
     "                encounters.append((eid, id, first_e, last_e))\n",
     "                eid += 1\n",
+    "                # Reset first_e and last_e\n",
     "                first_e = None\n",
     "                last_e = None\n",
+    "        # if there is no last event, i.e. last_e is None, current event is last event\n",
     "        last_e = e\n",
     "print(len(encounters))"
    ]
