--- a/Create_Care_Events.ipynb
+++ b/Create_Care_Events.ipynb
@@ -342,7 +342,9 @@
    "outputs": [],
    "source": [
     "def get_encounter_id(admission):\n",
+    "    # Get the start and end time of all encounters for the admission\n",
     "    temp_enctrs = encounters_df[encounters_df.HADM_ID == admission.HADM_ID.unique()[0]].reset_index()\n",
+    "    # Get all the events that occured during the admission. This includes the time of events.\n",
     "    temp_events = admission.reset_index()\n",
     "    \n",
     "    # Create an array of length equal to length of encounters. The value in each index of the array\n",
@@ -355,7 +357,9 @@
     "    # should be located\n",
     "    end_idx = np.searchsorted(temp_events.TIME, temp_enctrs.END_TIME, side='right') - 1\n",
     "    \n",
-    "    # Loop through each encounter ID and assign it to the appropriate columns in temp_events\n",
+    "    # Combined, start_idx and end_idx tell us the index for the first and last event of each encounter.\n",
+    "    # Loop through each encounter and assign the appropriate encounter ID to each event in the range of start_idx and end_idx.\n",
+    "    # All events in that range have the same EID. \n",
     "    for i in range(len(temp_enctrs)):\n",
     "        temp_events.loc[start_idx[i]:end_idx[i], 'EID'] = temp_enctrs.EID[i]\n",
     "    \n",
